Integrate to Heroku

--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,10 @@ group 'com.beatsnake'
 version '0.0.1'
 mainClassName = "io.ktor.server.netty.EngineMain"
 
+task stage {
+    dependsOn installDist
+}
+
 sourceSets {
     main.kotlin.srcDirs = main.java.srcDirs = ['src']
     test.kotlin.srcDirs = test.java.srcDirs = ['test']
