--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,21 @@
 buildscript {
     repositories {
         jcenter()
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
     }
 
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.kotlin:kotlin-serialization:1.6.0-RC"
     }
 
 }
 
 apply plugin: 'kotlin'
 apply plugin: 'application'
+apply plugin: "org.jetbrains.kotlin.plugin.serialization"
 
 group 'com.beatsnake'
 version '0.0.1'
@@ -31,6 +36,7 @@ repositories {
     mavenLocal()
     jcenter()
     maven { url 'https://kotlin.bintray.com/ktor' }
+    mavenCentral()
 }
 
 dependencies {
@@ -41,5 +47,6 @@ dependencies {
     implementation "io.ktor:ktor-websockets:$ktor_version"
     implementation "io.ktor:ktor-gson:$ktor_version"
     testImplementation "io.ktor:ktor-server-tests:$ktor_version"
-    implementation("org.litote.kmongo:kmongo-coroutine:4.2.8")
+    implementation 'org.litote.kmongo:kmongo-coroutine:4.3.0'
+    implementation "io.ktor:ktor-serialization:$ktor_version"
 }
