--- a/build.gradle
+++ b/build.gradle
@@ -41,12 +41,26 @@ repositories {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-    implementation "io.ktor:ktor-server-netty:$ktor_version"
     implementation "ch.qos.logback:logback-classic:$logback_version"
-    implementation "io.ktor:ktor-server-core:$ktor_version"
-    implementation "io.ktor:ktor-websockets:$ktor_version"
-    implementation "io.ktor:ktor-gson:$ktor_version"
-    testImplementation "io.ktor:ktor-server-tests:$ktor_version"
+
+    // K Mongo DB
     implementation 'org.litote.kmongo:kmongo-coroutine:4.3.0'
+
+    // Ktor
+    implementation "io.ktor:ktor-server-netty:$ktor_version"
+    implementation "io.ktor:ktor-server-core:$ktor_version"
+
+    // Ktor serialization
+    implementation "io.ktor:ktor-gson:$ktor_version"
     implementation "io.ktor:ktor-serialization:$ktor_version"
+
+    // Ktor web socket
+    implementation "io.ktor:ktor-websockets:$ktor_version"
+
+    // Ktor auth
+    implementation "io.ktor:ktor-auth:$ktor_version"
+    implementation "io.ktor:ktor-auth-jwt:$ktor_version"
+
+    // Ktor test
+    testImplementation "io.ktor:ktor-server-tests:$ktor_version"
 }
